# ml-shap

./: .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  render.yaml
api/: Dockerfile  __main__.py  api_model.py  requirements.txt
api/config/: config.py  config.yaml
api/model/: explainer_xgb.pkl  model.pkl
api/src/: main.py  models.py  process.py  process_doc.py
app/: Dockerfile  index.html  previsao_inadimplencia_app.py  requirements.txt
app/config/: config.py  config.yaml
app/src/: __init__.py  app.py
application/: index.html
dictionary/: index.html
docs/: app.md  application.md  dictionary.md  index.md  process.md  utilizacao.md
notebook/: config.yaml  shap_model.ipynb
process/: index.html
search/: search_index.json
utilizacao/: index.html
